--- a/reports/FIREFOX_undefined_ANY_sysadminTest.xml
+++ b/reports/FIREFOX_undefined_ANY_sysadminTest.xml
@@ -1,65 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <testsuites errors="0"
             failures="0"
-            tests="1">
+            tests="2">
 
   <testsuite name="sysadminTest"
-    errors="0" failures="0" hostname="" id="" package="sysadminTest" skipped="0"
-    tests="1" time="12.88" timestamp="Wed, 07 Jun 2017 14:40:50 GMT">
+    errors="0" failures="0" hostname="" id="" package="sysadminTest" skipped="2"
+    tests="2" time="0.000" timestamp="Thu, 08 Jun 2017 13:16:24 GMT">
   
-    <testcase name="Open browser" classname="sysadminTest" time="12.88" assertions="25">
-
+  
     
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
-
-    
+    <testcase
+      name="Open browser" classname="sysadminTest">
+      <skipped />
     </testcase>
-  
+    
+    <testcase
+      name="Start up params " classname="sysadminTest">
+      <skipped />
+    </testcase>
+    
   
   </testsuite>
 </testsuites>
